# CPlusCPlusTemplateSolution

./: .gitignore  CMakeLists.txt  TemplateSolution.sln  build.cmd
TemplateConsoleApplication/: CMakeLists.txt  TemplateConsoleApplication.cpp  TemplateConsoleApplication.vcxproj  TemplateConsoleApplication.vcxproj.filters
TemplateGoogleTest/: TemplateGoogleTest.vcxproj  pch.h  test.cpp
TemplateLibrary/: CMakeLists.txt  TemplateLibrary.def  TemplateLibrary.vcxproj  TemplateLibrary.vcxproj.filters  dllmain.cpp  framework.h  pch.h
